# frameforge

./: .gitignore  FRAMEFORGE_SPEC.md  README.md  frameforge-ui.html  pyproject.toml  run.py  start.sh
backend/: app.py  config.py  ffmpeg_utils.py  jobs.py  routes.py
frontend/: index.html
frontend/src/: App.css  App.jsx  api.js
