[project]
name = "frameforge"
version = "0.1.0"
description = "Local frame extraction & compression tool for scroll-scrub animations"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "aiofiles>=24.1.0",
    "pydantic>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
